--- a/Advent_Of_Code_2022/Properties/launchSettings.json
+++ b/Advent_Of_Code_2022/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Advent_Of_Code_2022": {
       "commandName": "Project",
-      "commandLineArgs": "-d 5"
+      "commandLineArgs": "-d 5 -r 0"
     }
   }
 }
